connect with twitter and get status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 # logging
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
+debug=false
+
+# Twitter Credentials
+oauth.consumerKey=KRy7l0v8wex3w8Sy5zThai3Ea
+oauth.consumerSecret=X2eBm0Y21kYEuR74W3Frqc2JVIizOj8Q1EVGatDsEVVEJo0ucu
+oauth.accessToken=1220032047516921859-otvXjhExyUTZ5GLxssc9h5ORqtPZja
+oauth.accessTokenSecret=tmJKqM4ORfQW6CH7wIVV8uKNpmSEmeFAP8lYwGb19uYjj
